--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <li><a href="nutrition.html" class="hover:text-blue-600 transition">التغذية</a></li>
         <li><a href="exercise.html" class="hover:text-blue-600 transition">التمرين</a></li>
         <li><a href="trainer.html" class="hover:text-blue-600 transition">المدرب الآلي</a></li>
+        <li><a href="admin-dashboard.html" class="hover:text-blue-600 transition"> لوحة التحكم</a></li>
       </ul>
 
       <!-- أزرار تسجيل الدخول وإنشاء حساب -->
