--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,101 +1,75 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لوحة القيادة - إدارة الموقع</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap');
-        body {
-            font-family: 'Tajawal', sans-serif;
-            background-color: #edf2f7;
-        }
-        /* Style for smooth transitions */
-        .transition-all {
-            transition: all 0.3s ease;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>لوحة القيادة - إدارة الموقع</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
+    body {
+      font-family: 'Tajawal', sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-gray-100">
-    <div class="flex min-h-screen">
-        <!-- Sidebar -->
-        <aside class="w-72 bg-gray-900 text-gray-200 p-6">
-            <div class="mb-10">
-                <h2 class="text-3xl font-extrabold">لوحة القيادة</h2>
-            </div>
-            <nav>
-                <ul class="space-y-4">
-                    <li>
-                        <a href="admin-dashboard.html" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>الرئيسية</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>إدارة المستخدمين</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>المحتوى</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>التقارير</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>الإعدادات</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index.html" class="block p-3 rounded hover:bg-gray-700 transition-all">
-                            <span>عرض الموقع</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </aside>
 
-        <!-- Main Content -->
-        <main class="flex-1 p-10">
-            <header class="mb-10 border-b border-gray-300 pb-4">
-                <h1 class="text-4xl font-bold text-gray-800">مرحبًا بكم في لوحة إدارة الموقع</h1>
-                <p class="mt-2 text-gray-600">تابع الأداء والإحصائيات الرئيسية للموقع من هنا</p>
-            </header>
+  <!-- شريط علوي يظهر فقط في الموبايل -->
+  <div class="md:hidden bg-blue-800 text-white flex items-center justify-between p-4">
+    <h2 class="text-lg font-bold">لوحة القيادة</h2>
+    <button onclick="toggleSidebar()" class="text-white text-3xl">&#9776;</button>
+  </div>
 
-            <section>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Card 1: إجمالي المستخدمين -->
-                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all">
-                        <h2 class="text-xl font-semibold mb-2 text-gray-700">إجمالي المستخدمين</h2>
-                        <p class="text-4xl font-bold text-blue-600">1,245</p>
-                    </div>
-                    <!-- Card 2: التحديات النشطة -->
-                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all">
-                        <h2 class="text-xl font-semibold mb-2 text-gray-700">التحديات النشطة</h2>
-                        <p class="text-4xl font-bold text-green-600">5</p>
-                    </div>
-                    <!-- Card 3: الرسائل الواردة -->
-                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all">
-                        <h2 class="text-xl font-semibold mb-2 text-gray-700">الرسائل الواردة</h2>
-                        <p class="text-4xl font-bold text-purple-600">12</p>
-                    </div>
-                </div>
+  <div class="flex min-h-screen">
 
-                <div class="mt-12">
-                    <h2 class="text-2xl font-bold mb-4 text-gray-800">إحصائيات إضافية</h2>
-                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-2xl transition-all">
-                        <p class="text-gray-600">
-                            يمكن هنا إضافة تقارير ورسوم بيانية إحصائية لمراقبة أداء الموقع وعرضها بطريقة تفاعلية باستخدام مكتبات مثل Chart.js أو D3.js.
-                        </p>
-                    </div>
-                </div>
-            </section>
-        </main>
-    </div>
+    <!-- الشريط الجانبي -->
+    <aside id="sidebar" class="bg-gray-900 text-white w-72 p-6 space-y-6 fixed inset-y-0 right-0 transform md:translate-x-0 translate-x-full md:static z-50 transition-transform duration-300 ease-in-out">
+      <!-- زر إغلاق في الموبايل -->
+      <div class="flex justify-between items-center md:hidden mb-6">
+        <h2 class="text-xl font-bold">القائمة</h2>
+        <button onclick="toggleSidebar()" class="text-white text-2xl">&times;</button>
+      </div>
+
+      <h2 class="hidden md:block text-3xl font-bold mb-10">لوحة القيادة</h2>
+      <nav class="space-y-4">
+        <a href="admin-dashboard.html" class="block p-3 rounded hover:bg-gray-700 transition">الرئيسية</a>
+        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition">إدارة المستخدمين</a>
+        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition">المحتوى</a>
+        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition">التقارير</a>
+        <a href="#" class="block p-3 rounded hover:bg-gray-700 transition">الإعدادات</a>
+        <a href="index.html" class="block p-3 rounded hover:bg-gray-700 transition">عرض الموقع</a>
+      </nav>
+    </aside>
+
+    <!-- المحتوى الرئيسي -->
+    <main class="flex-1 p-6 md:p-10 md:mr-7">
+      <header class="mb-10 border-b border-gray-300 pb-4">
+        <h1 class="text-4xl font-bold text-gray-800">مرحبًا بك في لوحة التحكم</h1>
+        <p class="mt-2 text-gray-600">تابع الأداء والإحصائيات الرئيسية للموقع</p>
+      </header>
+
+      <section class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+          <h3 class="text-xl text-gray-700 mb-2">إجمالي المستخدمين</h3>
+          <p class="text-3xl font-bold text-blue-600">1,245</p>
+        </div>
+        <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+          <h3 class="text-xl text-gray-700 mb-2">التحديات النشطة</h3>
+          <p class="text-3xl font-bold text-green-600">5</p>
+        </div>
+        <div class="bg-white p-6 rounded-xl shadow hover:shadow-md transition">
+          <h3 class="text-xl text-gray-700 mb-2">الرسائل الواردة</h3>
+          <p class="text-3xl font-bold text-purple-600">12</p>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.getElementById("sidebar");
+      sidebar.classList.toggle("translate-x-full");
+    }
+  </script>
 </body>
 </html>
