--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <li><a href="nutrition.html" class="block hover:text-blue-600 transition">التغذية</a></li>
       <li><a href="exercise.html" class="block hover:text-blue-600 transition">التمرين</a></li>
       <li><a href="trainer.html" class="block hover:text-blue-600 transition">المدرب الآلي</a></li>
+      <li><a href="admin-dashboard.html" class="block hover:text-blue-600 transition"> لوحة التحكم</a></li>
     </ul>
 
     <div class="flex flex-col gap-3 mt-4">
