--- a/exercise.html
+++ b/exercise.html
@@ -20,6 +20,8 @@
       }
     </style>
     <link rel="preconnect" href="https://images.pexels.com" />
+    <link rel="preload" as="image" href="your-image.webp" type="image/webp">
+
   </head>
   <body class="bg-gray-50">
     <!-- شريط التنقل -->
@@ -108,31 +110,44 @@
     </script>
 
     <!-- قسم البطل -->
-    <section
-      id="hero"
-      class="hero-gradient text-white py-20 animate__animated animate__fadeIn"
-    >
-      <div
-        class="container mx-auto px-4 flex flex-col md:flex-row items-center gap-10"
-      >
-        <div class="md:w-1/2 text-center md:text-right">
-          <h2 class="text-4xl md:text-5xl font-bold mb-4">
-            تمارين لتحسين لياقتك
-          </h2>
-          <p class="text-lg md:text-xl leading-relaxed mb-6">
-            اكتشف روتينات تمرين متنوعة تساعدك على بناء القوة والقدرة البدنية
-            وتعزيز صحتك.
-          </p>
-        </div>
-        <div class="md:w-1/2">
-          <img
-            src="https://images.pexels.com/photos/1552249/pexels-photo-1552249.jpeg"
-            alt="تمارين رياضية"
-            class="w-full h-auto rounded-2xl shadow-2xl object-cover"
-          />
-        </div>
+<section
+  id="hero"
+  class="relative hero-gradient text-white py-28 overflow-hidden animate__animated animate__fadeIn"
+  style="
+    background-image: url('https://images.pexels.com/photos/1552249/pexels-photo-1552249.jpeg');
+    background-size: cover;
+    background-position: center;
+  "
+>
+  <!-- طبقة تعتيم على الخلفية -->
+  <div class="absolute inset-0 bg-black/50"></div>
+
+  <!-- المحتوى -->
+  <div class="relative z-10 container mx-auto px-4 flex items-center">
+    <div class="w-full md:w-1/2 text-left pl-4 md:pl-20">
+      <h2 class="text-4xl md:text-5xl font-bold mb-4">
+        تمارين لتحسين لياقتك
+      </h2>
+      <p class="text-lg md:text-xl leading-relaxed mb-6">
+        اكتشف روتينات تمرين متنوعة تساعدك على بناء القوة والقدرة البدنية وتعزيز صحتك.
+      </p>
+      <div class="flex gap-4 flex-wrap">
+        <button
+          class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition"
+        >
+          ابدأ التمارين
+        </button>
+        <button
+          class="border-2 border-white text-white px-6 py-3 rounded-full font-bold hover:bg-white hover:text-blue-600 transition"
+        >
+          شاهد المزيد
+        </button>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- قسم روتينات التمرين -->
     <section class="py-20 bg-white">
@@ -298,20 +313,31 @@
     </section>
 
     <!-- قسم دعوة للعمل -->
-    <section class="py-16 bg-blue-600 text-white">
-      <div class="container mx-auto px-4 text-center">
-        <h2 class="text-3xl font-bold mb-4">ابدأ رحلتك نحو لياقة أفضل</h2>
-        <p class="max-w-xl mx-auto mb-8">
-          انضم الآن للحصول على خطط تمارين مخصصة ونصائح رياضية تساعدك على تحقيق
-          أفضل النتائج.
-        </p>
-        <a
-          href="signup.html"
-          class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition inline-flex items-center"
-          >سجل الآن</a
-        >
-      </div>
-    </section>
+  <section
+  class="relative py-16 text-white"
+  style="
+    background-image: url('https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg');
+    background-size: cover;
+    background-position: center;
+  "
+>
+  <!-- طبقة تغبيش بسيطة -->
+  <div class="absolute inset-0 bg-blue-800/70"></div>
+
+  <div class="relative container mx-auto px-4 text-center z-10">
+    <h2 class="text-3xl font-bold mb-4">ابدأ رحلتك نحو لياقة أفضل</h2>
+    <p class="max-w-xl mx-auto mb-8">
+      انضم الآن للحصول على خطط تمارين مخصصة ونصائح رياضية تساعدك على تحقيق
+      أفضل النتائج.
+    </p>
+    <a
+      href="signup.html"
+      class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition inline-flex items-center"
+      >سجل الآن</a
+    >
+  </div>
+</section>
+
 
     <!-- التذييل -->
     <footer class="bg-gray-900 text-gray-300 py-10">
