--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         border-color: #3b82f6;
       }
     </style>
+    <link rel="preload" as="image" href="your-image.webp" type="image/webp">
+
   </head>
   <body class="bg-gray-50">
     <!-- شريط التنقل -->
@@ -122,41 +124,45 @@
 
 
     <!-- قسم البطل -->
-    <section
-      id="hero"
-      class="hero-gradient text-white py-16 animate__animated animate__fadeIn"
-    >
-      <div
-        class="container mx-auto px-4 flex flex-col md:flex-row items-center"
-      >
-        <div class="md:w-1/2 mb-8 md:mb-0">
-          <h2 class="text-4xl font-bold mb-4">اجعل لياقتك لعبة ممتعة!</h2>
-          <p class="text-xl mb-6">
-            احصل على نقاط وتقدم في المستويات أثناء ممارسة الرياضة، وكافئ نفسك
-            وطور شخصيتك الكرتونية!
-          </p>
-          <div class="flex flex-col sm:flex-row gap-4">
-            <button
-              class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition animate__animated animate__pulse animate__infinite"
-            >
-              حمل التطبيق الآن
-            </button>
-            <button
-              class="border-2 border-white text-white px-6 py-3 rounded-full font-bold hover:bg-white hover:text-blue-600 transition"
-            >
-              تعرف أكثر
-            </button>
-          </div>
-        </div>
-        <div class="md:w-1/2 flex justify-center">
-          <img
-            src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/06b3b7f2-2a84-464b-b256-7c62286bdc6a.png"
-            alt="شخصية كرتونية رياضية مبتسمة تقوم بتمارين رياضية مع عناصر الألعاب والإنجازات"
-            class="w-full max-w-md rounded-lg shadow-xl"
-          />
-        </div>
+<section
+  id="hero"
+  class="relative hero-gradient text-white py-28 overflow-hidden animate__animated animate__fadeIn"
+  style="
+    background-image: url('https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg');
+    background-size: cover;
+    background-position: center;
+  "
+>
+  <!-- طبقة تغبيش بسيطة -->
+  <div class="absolute inset-0 bg-black/50"></div>
+
+  <!-- محتوى النص على الشمال -->
+  <div class="relative container mx-auto px-4 z-10 flex items-center">
+    <div class="w-full md:w-1/2 text-left">
+      <h2 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">
+        اجعل لياقتك لعبة ممتعة!
+      </h2>
+      <p class="text-xl mb-6">
+        احصل على نقاط وتقدم في المستويات أثناء ممارسة الرياضة، وكافئ نفسك
+        وطور شخصيتك الكرتونية!
+      </p>
+      <div class="flex flex-col sm:flex-row gap-4">
+        <button
+          class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition animate__animated animate__pulse animate__infinite"
+        >
+          حمل التطبيق الآن
+        </button>
+        <button
+          class="border-2 border-white text-white px-6 py-3 rounded-full font-bold hover:bg-white hover:text-blue-600 transition"
+        >
+          تعرف أكثر
+        </button>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- قسم الإحصائيات -->
     <section
@@ -531,127 +537,62 @@
     </section>
 
     <!-- قسم التطبيق -->
-    <section class="py-16 hero-gradient text-white">
-      <div class="container mx-auto px-4">
-        <div class="flex flex-col md:flex-row items-center">
-          <div class="md:w-1/2 mb-8 md:mb-0 flex justify-center">
-            <img
-              src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/c0c4496c-3d8e-45dc-850a-13f29b7c3a41.png"
-              alt="هاتف محمول يعرض واجهة تطبيق لياقتك مع شخصية المستخدم ونقاط الإنجاز"
-              class="w-full max-w-xs"
-            />
-          </div>
-          <div class="md:w-1/2">
-            <h2 class="text-3xl font-bold mb-6">حمل تطبيق لياقتك الآن!</h2>
-            <p class="text-xl mb-6">
-              احصل على تجربة كاملة مع إشعارات التذكير، متابعة أدق للنشاط،
-              وإمكانية المنافسة مع الأصدقاء.
-            </p>
+  <section class="py-16 text-white bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1605296867304-46d5465a13f1?auto=format&fit=crop&w=1400&q=80');">
+  <div class="container mx-auto px-4 bg-gradient-to-r from-black/70 via-black/50 to-transparent rounded-2xl">
+    <div class="flex flex-col items-start text-left">
+      
+      <h2 class="text-3xl font-bold mb-6">حمل تطبيق لياقتك الآن!</h2>
+      <p class="text-xl mb-6 max-w-xl">
+        احصل على تجربة كاملة مع إشعارات التذكير، متابعة أدق للنشاط، 
+        وإمكانية المنافسة مع الأصدقاء.
+      </p>
 
-            <div class="space-y-4 mb-8">
-              <div class="flex items-center">
-                <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-6 w-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    />
-                  </svg>
-                </div>
-                <p class="text-lg">متابعة التمارين اليومية</p>
-              </div>
-              <div class="flex items-center">
-                <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-6 w-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    />
-                  </svg>
-                </div>
-                <p class="text-lg">إشعارات وتذكيرات لتحفيزك</p>
-              </div>
-              <div class="flex items-center">
-                <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-6 w-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 13l4 4L19 7"
-                    />
-                  </svg>
-                </div>
-                <p class="text-lg">منافسة مع الأصدقاء</p>
-              </div>
-            </div>
-
-            <div class="flex flex-col sm:flex-row gap-4">
-              <button
-                class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition inline-flex items-center justify-center"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6 ml-2"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
-                  />
-                </svg>
-                App Store
-              </button>
-              <button
-                class="bg-black bg-opacity-20 text-white px-6 py-3 rounded-full font-bold hover:bg-black hover:bg-opacity-30 transition inline-flex items-center justify-center"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6 ml-2"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                  />
-                </svg>
-                Google Play
-              </button>
-            </div>
+      <div class="space-y-4 mb-8">
+        <div class="flex items-center">
+          <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+            </svg>
           </div>
+          <p class="text-lg">متابعة التمارين اليومية</p>
+        </div>
+        <div class="flex items-center">
+          <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+            </svg>
+          </div>
+          <p class="text-lg">إشعارات وتذكيرات لتحفيزك</p>
+        </div>
+        <div class="flex items-center">
+          <div class="bg-white bg-opacity-20 p-2 rounded-full mr-4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+            </svg>
+          </div>
+          <p class="text-lg">منافسة مع الأصدقاء</p>
         </div>
       </div>
-    </section>
+
+      <div class="flex flex-col sm:flex-row gap-4">
+        <button class="bg-white text-blue-600 px-6 py-3 rounded-full font-bold hover:bg-gray-100 transition inline-flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"/>
+          </svg>
+          App Store
+        </button>
+        <button class="bg-black bg-opacity-20 text-white px-6 py-3 rounded-full font-bold hover:bg-black hover:bg-opacity-30 transition inline-flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+          </svg>
+          Google Play
+        </button>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- قسم آراء المستخدمين -->
     <section class="py-16 bg-gray-50">
