--- a/trainer.html
+++ b/trainer.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <title>💪 المدرب اللالي - Gemini</title>
+    <title>المدرب اللالي</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
@@ -17,22 +17,36 @@
     </style>
   </head>
   <body class="bg-gray-900 text-white flex flex-col min-h-screen">
-    <!-- الهيدر -->
+    <!-- العنوان -->
     <div
       class="w-full bg-blue-600 flex items-center justify-center py-4 text-xl font-bold shadow relative"
     >
       <a href="index.html" class="absolute left-4">
         <button onclick="history.back()" class="text-white">
-          ⬅
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M15 19l-7-7 7-7"
+            />
+          </svg>
         </button>
+        <span class="w-6"></span>
       </a>
       <header class="w-full text-center">💪 اسأل المدرب</header>
     </div>
 
-    <!-- صندوق الشات -->
+    <!-- صندوق الدردشة -->
     <div id="chat" class="flex-1 overflow-y-auto p-4"></div>
 
-    <!-- إدخال الرسالة -->
+    <!-- مربع الإدخال -->
     <form id="chat-form" class="bg-gray-800 p-4 flex gap-2">
       <input
         id="user-input"
@@ -50,9 +64,8 @@
     </form>
 
     <script>
-      // 🔑 ضيف هنا مفتاح Gemini API بتاعك
-      const GEMINI_API_KEY = "AIzaSyCNyD13AcgcvlhEyb7JPgOF3cx3Sl2KYqs";
-
+      const OPENROUTER_API_KEY =
+        "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";
       const chatForm = document.getElementById("chat-form");
       const userInput = document.getElementById("user-input");
       const chatBox = document.getElementById("chat");
@@ -68,30 +81,28 @@
 
         try {
           const res = await fetch(
-            `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`,
+            "https://openrouter.ai/api/v1/chat/completions",
             {
               method: "POST",
               headers: {
                 "Content-Type": "application/json",
+                Authorization: `Bearer ${OPENROUTER_API_KEY}`,
+                "HTTP-Referer": "https://your-site.com",
+                "X-Title": "My GPT Chat",
               },
               body: JSON.stringify({
-                contents: [
-                  {
-                    role: "user",
-                    parts: [{ text: message }],
-                  },
-                ],
+                model: "openai/gpt-3.5-turbo",
+                messages: [{ role: "user", content: message }],
               }),
             }
           );
 
           const data = await res.json();
           const reply =
-            data.candidates?.[0]?.content?.parts?.[0]?.text ||
-            "لم يتم الحصول على رد.";
+            data.choices?.[0]?.message?.content || "لم يتم الحصول على رد.";
           updateMessage(loadingId, reply);
         } catch (err) {
-          updateMessage(loadingId, "⚠️ حدث خطأ أثناء الاتصال بـ Gemini API.");
+          updateMessage(loadingId, "حدث خطأ أثناء الاتصال بالخادم.");
         }
       });
 
@@ -100,6 +111,7 @@
         div.className = `w-full flex ${
           sender === "user" ? "justify-end" : "justify-start"
         } my-2`;
+
         const bubble = document.createElement("div");
         bubble.className = `message ${
           sender === "user"
@@ -107,6 +119,7 @@
             : "bg-gray-700 text-white rounded-bl-none"
         }`;
         bubble.textContent = text;
+
         div.appendChild(bubble);
         chatBox.appendChild(div);
         chatBox.scrollTop = chatBox.scrollHeight;
